# retrotui

./: .ci-second-cut-final  .core-second-cut-trigger  .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  PROJECT.md  PROJECT_ANALYSIS.md  README.md  RELEASE.md  ROADMAP.md  coverage.txt  coverage_report.txt  coverage_report_utf8.txt  debug_solitaire.py  preview.html  pyproject.toml  pytest_all_out.txt  pytest_log.txt  pytest_out.txt  retrotui.py  retrotui.py.bak  setup.sh  task.md  test_markdown.md  test_output.txt  tests_output.txt  transactional-trash-unittest.txt  v0.9.1_ULTIMATE.md
.claude/: settings.local.json
.githooks/: pre-commit
.github/: KEEP_BRANCH_SYNC_SENTINEL
.roadmap/: RETROTUI_OS_ROADMAP.md
docs/: .runtime-performance-cut  BASELINE_PROFILING.md  CODEX_NEXT_STEPS.md  COMPATIBILITY_LAB.md  CORE_AUDIT_2026-07.md  ICON_STYLES.md  IMPROVEMENTS.md  MOUSE_BACKEND_CONTRACT.md  PROJECT_STATUS.md  RELEASE.md  SHORTCUT_POLICY_PLAN.md  STABILIZATION_PRE_0.9.6.md  TECHNICAL_AUDIT_2026-07.md  TERMINAL_CAPABILITY_CONTRACT.md  TERMINAL_DEC_SCREEN_CONTROLS.md  TERMINAL_ESC_REPORTS_TABS.md  TERMINAL_UNICODE_CELLS.md  TERMINAL_VT_MODES_PLAN.md  TTY_SIGNAL_STRESS.md  TTY_TEST_MATRIX.md  plugin-guide.md
retrotui/: __init__.py  __main__.py  atomic_io.py  color_pairs.py  compat_lab.py  constants.py  theme.py  utils.py
tests/: __init__.py  _support.py  test_action_payload_contracts.py  test_action_runner.py  test_actions.py  test_ansi_and_dragdrop_and_termios.py  test_ansi_basic.py  test_app_manager_v2.py  (+135 more)
(+264 files in other folders)
