[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retrotui"
version = "0.6.0"
description = "RetroTUI desktop environment for terminal"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "RetroTUI contributors" }
]
dependencies = []

[project.scripts]
retrotui = "retrotui.__main__:main_cli"

[tool.setuptools.packages.find]
include = ["retrotui*"]
