[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retrotui"
version = "0.9.5"
description = "RetroTUI desktop environment for terminal"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "RetroTUI contributors" }
]
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
    "pywinpty>=2.0; sys_platform == 'win32'",
    "windows-curses>=2.4; sys_platform == 'win32'",
]

[project.optional-dependencies]
test = [
    "pytest",
    "ruff",
]

[project.scripts]
retrotui = "retrotui.__main__:main_cli"

[tool.setuptools.packages.find]
include = ["retrotui*"]

[tool.setuptools.package-data]
retrotui = ["terminfo/*.src"]
